@startuml

abstract class Person{
-name:string
-lastName:string
+ <<virtual>> getInfo(): string
}

!ifndef UKRYJ_NOTATKI

note right of Person
Abstrakcyjna klasa reprezentująca
człowieka.
name - imie;
lastName - nazwisko;
isArchive - prezentuje czy dany człowiek jest archiwalny.
getInfo - wirtualna metoda prezentuja informacje o osobie.
end note

!endif

abstract class Personnel{}
abstract class Statusable{}

Person <|-- Personnel
Person <|-- Patient
Statusable <|--  Person

@enduml